--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "sinon": "^1.17.6"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --recursive",
+    "test": "export BABEL_ENV=test; mocha --compilers js:babel-core/register --recursive",
     "build": "rollup -c"
   }
 }
