Fix circleci build
Actions.js needed to be lower case!

--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
   },
   "scripts": {
     "test": "export BABEL_ENV=test; mocha --compilers js:babel-core/register --recursive",
-    "build": "npm run test; rollup -c"
+    "build": "rollup -c"
   }
 }
