Add a web build to /dist and a library build to /lib
Similar to what https://github.com/reactjs/redux does. Uses webpack to build `dist/sazerac.js` and `dist/sazerac.min.js` for web, and a `lib` directory that doesn't bundle files together. Also added `dist` and `lib` to .gitignore

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,11 @@
   "env": {
     "test": {
       "plugins": ["syntax-object-rest-spread", "transform-object-rest-spread", "rewire"]
+    },
+    "commonjs": {
+      "plugins": [
+        ["transform-es2015-modules-commonjs", { "loose": true }]
+      ]
     }
   }
 }
