--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "name": "Mike Calvanese",
     "url": "github.com/mikec"
   },
-  "main": "sazerac.js",
+  "browser": "dist/sazerac.js",
+  "main": "lib/main.js",
+  "files": [
+    "dist",
+    "lib",
+    "src"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mikec/sazerac.git"
@@ -25,20 +31,25 @@
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
     "babel-plugin-external-helpers": "^6.18.0",
     "babel-plugin-rewire": "^1.0.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-preset-es2015": "^6.18.0",
-    "babelrc-rollup": "^3.0.0",
+    "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
+    "cross-env": "^3.1.4",
     "mocha": "^3.2.0",
-    "rollup": "^0.36.4",
-    "rollup-plugin-babel": "^2.6.1",
-    "sinon": "^1.17.6"
+    "sinon": "^1.17.6",
+    "webpack": "^2.2.1"
   },
   "scripts": {
-    "test": "export BABEL_ENV=test; mocha --compilers js:babel-core/register --recursive",
-    "build": "rollup -c"
+    "test": "BABEL_ENV=test mocha --compilers js:babel-core/register --recursive",
+    "build": "npm run build:commonjs && npm run build:umd && npm run build:umd:min",
+    "build:umd": "cross-env BABEL_ENV=commonjs NODE_ENV=dev webpack src/main.js dist/sazerac.js",
+    "build:umd:min": "cross-env BABEL_ENV=commonjs NODE_ENV=prod webpack src/main.js dist/sazerac.min.js",
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib"
   }
 }
