--- a/package.json
+++ b/package.json
@@ -41,12 +41,16 @@
     "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
+    "eslint": "^3.15.0",
     "mocha": "^3.2.0",
     "sinon": "^1.17.6",
     "webpack": "^2.2.1"
   },
   "scripts": {
+    "init": "eslint --init",
+    "lint": "eslint src test",
     "test": "BABEL_ENV=test mocha --compilers js:babel-core/register --recursive",
+    "check": "npm run lint && npm run test",
     "build": "npm run build:commonjs && npm run build:umd && npm run build:umd:min",
     "build:umd": "cross-env BABEL_ENV=commonjs NODE_ENV=dev webpack src/main.js dist/sazerac.js",
     "build:umd:min": "cross-env BABEL_ENV=commonjs NODE_ENV=prod webpack src/main.js dist/sazerac.min.js",
