Use deep-eql instead of chai.assert.deepEqual
this removes the dependency on chai, which isn't needed since we're only trying to do a single deepEqual. Chai has a separate repo for their deep equal check, https://github.com/chaijs/deep-eql, which is now used instead of the full chaijs

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "chai": "^3.5.0",
+    "deep-eql": "^2.0.1",
     "lodash": "^4.17.2",
     "sprintf-js": "^1.0.3"
   },
