Split lodash dependencies up into individual modules
also removes lodash/isArray in favor of Array.isArray

and removes lodash/forEach and lodash/map which for whatever reason npm can't find from the circle build machine

--- a/package.json
+++ b/package.json
@@ -27,7 +27,14 @@
   "license": "MIT",
   "dependencies": {
     "deep-eql": "^2.0.1",
-    "lodash": "^4.17.2",
+    "lodash.at": "^4.6.0",
+    "lodash.concat": "^4.5.0",
+    "lodash.filter": "^4.6.0",
+    "lodash.isfunction": "^3.0.8",
+    "lodash.isobject": "^3.0.2",
+    "lodash.isstring": "^4.0.1",
+    "lodash.isundefined": "^3.0.1",
+    "lodash.toarray": "^4.4.0",
     "sprintf-js": "^1.0.3"
   },
   "devDependencies": {
