--- a/package.json
+++ b/package.json
@@ -51,6 +51,15 @@
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
     "eslint": "^3.15.0",
+    "jasmine": "^2.5.3",
+    "jest": "^19.0.2",
+    "karma": "^1.6.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-spec-reporter": "0.0.30",
+    "karma-webpack": "^2.0.3",
     "mocha": "^3.2.0",
     "sinon": "^1.17.6",
     "webpack": "^2.2.1"
@@ -58,12 +67,22 @@
   "scripts": {
     "init": "eslint --init",
     "lint": "eslint src test",
-    "test": "BABEL_ENV=test NODE_PATH=$NODE_PATH:$PWD/src mocha --compilers js:babel-core/register --recursive",
-    "test:watch": "BABEL_ENV=test NODE_PATH=$NODE_PATH:$PWD/src mocha --watch --watch-extensions js --compilers js:babel-core/register --recursive",
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:e2e": "npm run test:e2e-jasmine && npm run test:e2e-mocha && npm run test:e2e-jest",
+    "test:e2e-jasmine": "karma start test/e2e/config/karma-jasmine.conf.js",
+    "test:e2e-mocha": "karma start test/e2e/config/karma-mocha.conf.js",
+    "test:e2e-jest": "jest",
+    "test:unit": "BABEL_ENV=test NODE_PATH=$NODE_PATH:$PWD/src mocha test/unit --compilers js:babel-core/register --recursive",
     "check": "npm run lint && npm run test",
     "build": "npm run build:commonjs && npm run build:umd && npm run build:umd:min",
     "build:umd": "cross-env BABEL_ENV=commonjs NODE_ENV=dev webpack src/main.js dist/sazerac.js",
     "build:umd:min": "cross-env BABEL_ENV=commonjs NODE_ENV=prod webpack src/main.js dist/sazerac.min.js",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib"
+  },
+  "jest": {
+    "testRegex": "/test/e2e/spec/.*",
+    "moduleNameMapper": {
+      "sazerac": "<rootDir>/src/main.js"
+    }
   }
 }
