--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
         "semi": [
             "error",
             "never"
-        ]
+        ],
+        "no-trailing-spaces": "error"
     }
 }
