--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,10 +11,7 @@
     "extends": "eslint:recommended",
     "parserOptions": {
         "sourceType": "module",
-        "ecmaVersion": 6,
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true
-        }
+        "ecmaVersion": 9
     },
     "rules": {
         "indent": [
