--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,10 @@ jobs:
       - checkout
 
       - run:
+          name: Upgrade npm (since this is Node 6)
+          command: sudo npm install -g npm
+
+      - run:
           name: Install dependencies
           command: npm ci
 
