--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
     "eslint": "^5.16.0",
     "jasmine": "^2.5.3",
     "jest": "^19.0.2",
-    "karma": "^1.6.0",
+    "karma": "^4.1.0",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-spec-reporter": "0.0.30",
-    "karma-webpack": "^2.0.3",
-    "mocha": "^3.2.0",
+    "karma-webpack": "^3.0.5",
+    "mocha": "^6.1.4",
     "sinon": "^7.3.2",
     "webpack": "^2.2.1"
   },
@@ -73,7 +73,7 @@
     "test:e2e-jasmine": "karma start test/e2e/config/karma-jasmine.conf.js",
     "test:e2e-mocha": "karma start test/e2e/config/karma-mocha.conf.js",
     "test:e2e-jest": "jest",
-    "test:unit": "BABEL_ENV=test NODE_PATH=$NODE_PATH:$PWD/src mocha test/unit --compilers js:babel-core/register --recursive",
+    "test:unit": "BABEL_ENV=test NODE_PATH=$NODE_PATH:$PWD/src mocha test/unit --require babel-core/register --recursive",
     "check": "npm run lint && npm run test",
     "build": "npm run build:commonjs && npm run build:umd && npm run build:umd:min",
     "build:umd": "cross-env BABEL_ENV=commonjs NODE_ENV=dev webpack src/main.js dist/sazerac.js",
