--- a/package.json
+++ b/package.json
@@ -40,20 +40,22 @@
     "sprintf-js": "^1.0.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-external-helpers": "^6.18.0",
-    "babel-plugin-rewire": "^1.0.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-preset-es2015": "^6.22.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.4.4",
+    "babel-jest": "^24.7.1",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-rewire": "^1.2.0",
     "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
     "jasmine": "^2.5.3",
-    "jest": "^19.0.2",
+    "jest": "^24.7.1",
     "karma": "^4.1.0",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-jasmine": "^2.0.1",
@@ -73,7 +75,7 @@
     "test:e2e-jasmine": "karma start test/e2e/config/karma-jasmine.conf.js",
     "test:e2e-mocha": "karma start test/e2e/config/karma-mocha.conf.js",
     "test:e2e-jest": "jest",
-    "test:unit": "BABEL_ENV=test NODE_PATH=$NODE_PATH:$PWD/src mocha test/unit --require babel-core/register --recursive",
+    "test:unit": "BABEL_ENV=test NODE_PATH=$NODE_PATH:$PWD/src mocha test/unit --require @babel/register --recursive",
     "check": "npm run lint && npm run test",
     "build": "npm run build:commonjs && npm run build:umd && npm run build:umd:min",
     "build:umd": "cross-env BABEL_ENV=commonjs NODE_ENV=dev webpack src/main.js dist/sazerac.js",
