Enforce use of const (and let)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,8 @@
             "error",
             "never"
         ],
-        "no-trailing-spaces": "error"
+        "no-trailing-spaces": "error",
+        "no-var": "error",
+        "prefer-const": "error"
     }
 }
