--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "karma-webpack": "^4.0.2",
     "mocha": "^6.1.4",
     "sinon": "^7.3.2",
-    "webpack": "^4.35.0"
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5"
   },
   "scripts": {
     "init": "eslint --init",
