--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "karma-webpack": "^4.0.2",
     "mocha": "^7.1.2",
     "sinon": "^7.5.0",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "init": "eslint --init",
