--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
     "test:unit": "BABEL_ENV=test NODE_PATH=$NODE_PATH:$PWD/src mocha test/unit --require @babel/register --recursive",
     "check": "npm run lint && npm run test",
     "build": "npm run build:commonjs && npm run build:umd && npm run build:umd:min",
-    "build:umd": "cross-env BABEL_ENV=commonjs NODE_ENV=dev webpack src/main.js dist/sazerac.js",
-    "build:umd:min": "cross-env BABEL_ENV=commonjs NODE_ENV=prod webpack src/main.js dist/sazerac.min.js",
+    "build:umd": "cross-env BABEL_ENV=commonjs NODE_ENV=dev webpack src/main.js --output dist/sazerac.js",
+    "build:umd:min": "cross-env BABEL_ENV=commonjs NODE_ENV=prod webpack src/main.js --output dist/sazerac.min.js",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
     "prepare": "npm run build"
   },
